--- a/hub_and_spoke/complete/inventory/networks.yml
+++ b/hub_and_spoke/complete/inventory/networks.yml
@@ -10,6 +10,7 @@ all:
           hosts: 
             dev1:
             dev2:
+            dev3:
         cni:
           hosts: 
             cni1:
