--- a/hub_and_spoke/complete/host_vars/mod1.yml
+++ b/hub_and_spoke/complete/host_vars/mod1.yml
@@ -1,4 +1,3 @@
-ecosystem: hndovr
 production_state: mod
 instance: 1
 location: westeurope
@@ -9,15 +8,15 @@ address_prefixes_cidr:
 # Subnet and route tables
 subnets_list:
 - subnet1:
-  name: 'sn-az-{{ location_code }}-{{ production_state }}{{ instance }}-{{ ecosystem }}-k8s-1'
+  name: 'sn-az-{{ location_code }}-{{ production_state }}{{ instance }}-{{ ecosystem }}-app-1'
   subnet: '10.158.96.0/21'
-  route_table: 'rt-az-{{ location_code }}-{{ production_state }}{{ instance }}-{{ ecosystem }}-k8s-1'
+  route_table: 'rt-az-{{ location_code }}-{{ production_state }}{{ instance }}-{{ ecosystem }}-app-1'
 - subnet2:
   name: 'sn-az-{{ location_code }}-{{ production_state }}{{ instance }}-{{ ecosystem }}-inf-1'
   subnet: '10.158.104.0/24'
   route_table: 'rt-az-{{ location_code }}-{{ production_state }}{{ instance }}-{{ ecosystem }}-inf-1'
-# K8s subnet appliance routes
-route_list_k8s:
+# app subnet appliance routes
+route_list_app:
 - route1: 
   name: 'sn-it-{{ location_code }}-{{ production_state }}{{ instance }}-{{ ecosystem }}-int-1'
   address_prefix: '0.0.0.0/0'
@@ -45,7 +44,7 @@ route_list_inf:
   next_hop_ip_address: '{{ fwb_inside }}'
   state: present
 - route2: 
-  name: 'sn-it-{{ location_code }}-{{ production_state }}{{ instance }}-{{ ecosystem }}-k8s-1'
+  name: 'sn-it-{{ location_code }}-{{ production_state }}{{ instance }}-{{ ecosystem }}-app-1'
   address_prefix: '10.158.96.0/21'
   next_hop_type: virtual_appliance
   next_hop_ip_address: '{{ fwb_inside }}'
