--- a/hub_and_spoke/complete/inventory/networks.yml
+++ b/hub_and_spoke/complete/inventory/networks.yml
@@ -11,9 +11,9 @@ all:
             dev1:
             dev2:
             dev3:
-        cni:
+        itr:
           hosts: 
-            cni1:
+            itr1:
         qua:
           hosts: 
             qua1:
