--- a/bootstrapper/cloud-init.yml
+++ b/bootstrapper/cloud-init.yml
@@ -21,5 +21,5 @@ write_files:
 
 runcmd:
   - [git, "clone", "https://github.com/niksheridan/azure_templating.git"]
-  - [ansible-playbook, "-i", "localhost", "azure_templating/bootstrapper/configure.yml"]
+  - [ansible-playbook, "azure_templating/bootstrapper/configure.yml"]
   - [rm, "-rf", "azure_templating"]
