separating network and service creation

--- a/bootstrapper/Makefile
+++ b/bootstrapper/Makefile
@@ -17,7 +17,8 @@ endif
 	@echo "All environment variables are set"
 
 bootstrap: ## Create initialisation server and configure
-	@ansible-playbook --inventory inventory/servers.yml ./bootstrap.yml
+	@ansible-playbook --inventory inventory/servers.yml ./bootstrap_network.yml
+	@ansible-playbook --inventory inventory/servers.yml ./bootstrap_services.yml
 
 destroy: ## Destroy initialisation server
 	@az group delete --name "bootstrapper" --no-wait --yes
