--- a/bootstrapper/host_vars/azwergctl02.yml
+++ b/bootstrapper/host_vars/azwergctl02.yml
@@ -2,3 +2,6 @@ security_group_var: "{{ inventory_hostname }}-nsg"
 nic_var: "{{ inventory_hostname }}-nic"
 pip_var: "{{ inventory_hostname }}-pip"
 bootstrap_user: "nsheridan"
+# Sizes that can be used as variables here
+# https://docs.microsoft.com/en-us/azure/virtual-machines/linux/sizes-general
+vm_size: "Standard_DS1_v2"
