--- a/bootstrapper/group_vars/bootstrap_servers.yml
+++ b/bootstrapper/group_vars/bootstrap_servers.yml
@@ -1,7 +1,7 @@
 resource_group_var: "bootstrapper"
 location: "uksouth"
 vnet_var: "bootstrap-vnet"
-tags: "bootstrap"
+tags_var: "bootstrap"
 address_prefixes_cidr: 
 - 172.19.0.0/19
 # Subnet and route tables
